削除機能とかつけた

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>paintogether</title>
 <link href="./style.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script src="http://cdn.socket.io/stable/socket.io.js"></script>
 <script src="./main.js"></script>
 </head>
@@ -12,6 +12,7 @@
 <header>
 <h1>paintogether</h1>
 </header>
+<p><a href="javascript:void(0);" id="clearBtn">消す? 消しちゃう? マジで消しちゃう? マジかー。消しちゃうのかー。</a><br></p>
 <p>Socket.IOとHTML5のCanvasを使ってリアルタイムにお絵かきチャットをしてみた。サーバーサイドはnode.jsだよー。</p>
 <canvas id="canvas" width="640" height="480"></canvas>
 </body>
